# iso-downloader

./: .gitignore  Cargo.toml
data/: config.yml
src/: downloader.rs  main.rs  patches.rs  reader.rs  structure.rs  validator.rs
src/structure/: config.rs  sourceforge.rs
