[package]
name = "iso-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
curl = "0.4"
sha256 = "1.0.3"
md5 = "0.7.0"
